<?xml version="1.0" encoding="UTF-8"?>
<!--
	Copyright (c) Contributors to the Eclipse Foundation

	Licensed under the Apache License, Version 2.0 (the "License");
	you may not use this file except in compliance with the License.
	You may obtain a copy of the License at

		http://www.apache.org/licenses/LICENSE-2.0

	Unless required by applicable law or agreed to in writing, software
	distributed under the License is distributed on an "AS IS" BASIS,
	WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
	See the License for the specific language governing permissions and
	limitations under the License.

	SPDX-License-Identifier: Apache-2.0
-->

<project xmlns="http://maven.apache.org/POM/4.0.0"
		xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.eclipse.osgi-technology</groupId>
		<artifactId>org.eclipse.osgi-technology.pom.parent</artifactId>
		<version>0.0.1</version>
		<relativePath/>
	</parent>

	<groupId>org.eclipse.osgi-technology.plurl</groupId>
	<artifactId>plurl</artifactId>
	<version>${revision}</version>
	<description>Plurl API for multiplexing URL handlers</description>
	<name>plurl</name>
	<packaging>jar</packaging>

	<properties>
		<!-- Version also in @Version in package-info.java -->
		<revision>0.1.0-SNAPSHOT</revision>
		<java.version>1.8</java.version>
		<java.release>8</java.release>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<!-- bnd 7.x needs JDK 17+ to run; stay on 6.x so the build still works on JDK 8 -->
		<bnd.version>6.4.0</bnd.version>
		<osgi.annotation.version>8.1.0</osgi.annotation.version>
		<junit-version>4.13.2</junit-version>
		<add-opens-for-tests>--add-opens java.base/sun.net.www.protocol.jar=org.eclipse.osgi-technology.plurl --add-opens java.base/java.net=org.eclipse.osgi-technology.plurl --add-opens java.base/sun.net.www.protocol.jar=ALL-UNNAMED --add-opens java.base/java.net=ALL-UNNAMED</add-opens-for-tests>
	</properties>

	<url>https://www.osgi.org</url>
	<organization>
		<name>Eclipse Foundation</name>
		<url>https://www.eclipse.org</url>
	</organization>
	<licenses>
		<license>
			<name>Apache-2.0</name>
			<comments>Apache License, Version 2.0</comments>
			<url>https://opensource.org/licenses/apache2.0.php</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	<scm>
		<url>https://github.com/eclipse-osgi-technology/plurl</url>
		<connection>scm:git:https://github.com/eclipse-osgi-technology/plurl.git</connection>
		<developerConnection>scm:git:git@github.com:eclipse-osgi-technology/plurl.git</developerConnection>
		<tag>${revision}</tag>
	</scm>
	<developers>
		<developer>
			<id>tjwatson</id>
			<name>Thomas Watson</name>
			<email>tjwatson@us.ibm.com</email>
			<url>https://github.com/tjwatson</url>
			<organization>IBM</organization>
			<organizationUrl>https://developer.ibm.com</organizationUrl>
			<roles>
				<role>developer</role>
			</roles>
			<timezone>America/Chicago</timezone>
		</developer>
	</developers>
	<issueManagement>
		<system>GitHub Issues</system>
		<url>https://github.com/eclipse-osgi-technology/plurl/issues</url>
	</issueManagement>
	<mailingLists>
		<mailingList>
			<name>OSGi Users List</name>
			<post>osgi-users@eclipse.org</post>
			<archive>http://www.eclipse.org/lists/osgi-users</archive>
		</mailingList>
	</mailingLists>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.osgi</groupId>
				<artifactId>osgi.annotation</artifactId>
				<version>${osgi.annotation.version}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>${junit-version}</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<finalName>org.eclipse.osgi-technology.plurl</finalName>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
					<configuration>
						<detectJavaApiLink>false</detectJavaApiLink>
						<doclint>none</doclint>
						<notimestamp>true</notimestamp>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>biz.aQute.bnd</groupId>
				<artifactId>bnd-maven-plugin</artifactId>
				<executions>
					<!-- no tests.bnd / test fragment in this project -->
					<execution>
						<id>bnd-process-tests</id>
						<phase>none</phase>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<executions>
					<execution>
						<id>test-jar</id>
						<phase>none</phase>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>flatten-maven-plugin</artifactId>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>java-9-plus</id>
			<activation>
				<jdk>[9,)</jdk>
			</activation>
			<properties>
				<maven.compiler.release>${java.release}</maven.compiler.release>
			</properties>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<configuration>
							<argLine>${add-opens-for-tests}</argLine>
						</configuration>
						<executions>
							<execution>
								<id>execute-tests</id>
								<goals>
									<goal>test</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>java-8</id>
			<activation>
				<jdk>1.8</jdk>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<executions>
							<execution>
								<id>execute-tests</id>
								<goals>
									<goal>test</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

</project>
